# oppf

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: CNAME  index.html  install.sh  styles.css
examples/hello/.opp/: config.toml  design.md
examples/hello/.opp/review/: greeting_is_exact.md
examples/hello/.opp/test/: test.sh
src/: config.rs  context.rs  main.rs  project.rs  prompts.rs  ui.rs
src/agent/: claude.rs  codex.rs  mod.rs
src/commands/: clear.rs  discuss.rs  impl_cmd.rs  mod.rs  review.rs  test.rs  upgrade.rs
templates/: discuss.md.jinja  impl.md.jinja  review.md.jinja
