[package]
name = "oppf"
version = "0.1.0"
edition = "2021"
description = "Reference CLI for the Open-Prompt Project Format (OPPF)"
license = "MIT"
readme = "README.md"
repository = "https://oppf.dirp.dev"
keywords = ["oppf", "open-prompt", "ai", "codegen", "agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "opp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
minijinja = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.release]
strip = true
